--- a/src/ba/unsa/etf/rs/tut4/sample.fxml
+++ b/src/ba/unsa/etf/rs/tut4/sample.fxml
@@ -11,9 +11,9 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
            <children>
-              <TextArea layoutX="14.0" layoutY="14.0" prefHeight="165.0" prefWidth="285.0" text="HLB001,Crni hljeb,1&#10;HLB002,Bijeli hljeb,1.20&#10;MLK001,Mlijeko Meggle,1.10" />
-              <TextArea editable="false" layoutX="14.0" layoutY="188.0" prefHeight="165.0" prefWidth="285.0"></TextArea>
-              <Button layoutX="346.0" layoutY="83.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="114.0" text="Dodaj artikle" />
+              <TextArea fx:id="upisArtikala" layoutX="14.0" layoutY="14.0" prefHeight="165.0" prefWidth="285.0" text="HLB001,Crni hljeb,1&#10;HLB002,Bijeli hljeb,1.20&#10;MLK001,Mlijeko Meggle,1.10" />
+              <TextArea fx:id="ispisArtikala" editable="false" layoutX="14.0" layoutY="188.0" prefHeight="165.0" prefWidth="285.0"></TextArea>
+              <Button fx:id="dodajArtikle" onAction="#UpisiArtikle" layoutX="346.0" layoutY="83.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="114.0" text="Dodaj artikle" />
            </children></AnchorPane>
       </content>
     </Tab>
